# InfoFish

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: article.py  main.py  news.py  sources.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  styles.css
