[project]
name = "InfoFish-backend"
version = "0.1.0"
description = "舆情收集后端 - 基于 NewsNow API 聚合多平台热点"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "trafilatura>=1.12.0",
    "jieba>=0.42.1",
]

[tool.uv]
package = false
